--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <hr>
 
         <div class="copyright">
-            © 2023 www.myntra.com. All rights reserved.
+            © 2023 www.dc.com. All rights reserved.
         </div>
     </footer>
     <script src="data/items.js"></script>
