corrected all the footers

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a href="#">Home & Living</a>
                 <a href="#">Beauty</a>
                 <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
+                <a href="#">DC Insider</a>
             </div>
 
             <div class="footer_column">
@@ -81,7 +81,7 @@
                 <a href="#">Home & Living</a>
                 <a href="#">Beauty</a>
                 <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
+                <a href="#">DC Insider</a>
             </div>
 
             <div class="footer_column">
@@ -93,7 +93,7 @@
                 <a href="#">Home & Living</a>
                 <a href="#">Beauty</a>
                 <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
+                <a href="#">DC Insider</a>
             </div>
         </div>
         <hr>
