--- a/pages/bag.html
+++ b/pages/bag.html
@@ -62,7 +62,7 @@
                 <a href="#">Home & Living</a>
                 <a href="#">Beauty</a>
                 <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
+                <a href="#">DC Insider</a>
             </div>
 
             <div class="footer_column">
@@ -74,7 +74,7 @@
                 <a href="#">Home & Living</a>
                 <a href="#">Beauty</a>
                 <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
+                <a href="#">DC Insider</a>
             </div>
 
             <div class="footer_column">
@@ -86,13 +86,13 @@
                 <a href="#">Home & Living</a>
                 <a href="#">Beauty</a>
                 <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
+                <a href="#">DC Insider</a>
             </div>
         </div>
         <hr>
 
         <div class="copyright">
-            © 2023 www.myntra.com. All rights reserved.
+            © 2023 www.dc.com. All rights reserved.
         </div>
     </footer>
     <script src="../data/items.js"></script>
